Fix render badge

--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "description": "",
   "devDependencies": {
     "electron": "^39.2.7"
+  },
+  "dependencies": {
+    "canvas": "^3.2.0"
   }
 }
