--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "messenger",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
@@ -37,7 +37,7 @@
     "asar": true,
     "compression": "maximum",
     "win": {
-      "target": "nsis",
+      "target": "msi",
       "icon": "assets/icon.png"
     }
   }
