--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "win": {
       "target": "msi",
       "icon": "assets/icon.png"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "assets/icon.png"
     }
   }
 }
